a `links` option for specify links. The OpenTelemetry Bridge also supports
specifying links during span creation (with the limitation that span link
*attributes* are not supported).

- Add a <<trace-continuation-strategy>> configuration option to allow some
  control over how the APM Agent uses incoming trace-context headers for context
  propagation. ({issues}2592[#2592])

- Add "nodejs16.x" as one of the compatible runtimes for the Node.js APM agent
  Lambda layers now that
  https://aws.amazon.com/blogs/compute/node-js-16-x-runtime-now-available-in-aws-lambda/[this runtime is available on AWS].

[float]
===== Bug fixes

[float]
===== Chores

- Add a package-lock.json file to ensure repeatable builds of the AWS Lambda
  layer and to assist with security issue auditing. ({issue}2626[#2626])

- Deprecate instrumentation for the legacy "hapi" package. While the APM agent
  still supports it, that instrumentation is no longer tested and support
  will be dropped in the next major version of the agent. Note that the
  "@hapi/hapi" package is still fully supported. ({pull}2698[#2698])

- Deprecate instrumentation for the obsolete "jade" package. "jade" was renamed
  to "pug" in 2015.  While the APM agent still supports "jade", that
  instrumentation is no longer tested. ({pull}2711[#2711])


[[release-notes-3.33.0]]
==== 3.33.0 2022/05/05

[float]
===== Features

- Pulled the `traceparent` NPM module into a local module and replaced the
  `random-poly-fill` module with the built in `require('crypto').randomFillSync`
  function call ({pull}2669[#2669])

- Add a `parent` option to `agent.captureError(err[, options][, cb])` to allow
  passing in a Transaction or Span to use as the parent for the error. Before
  this change the *current* span or transaction, if any, was always used.
+
This option is not documented in the user docs, nor added to the TypeScript
types, because it is only expected to be useful for coming OTel Bridge work.

[float]
===== Bug fixes
