@@ -8,5 +8,8 @@ module.exports = {
   OUTCOME_SUCCESS: 'success',
   OUTCOME_UNKNOWN: 'unknown',
   RESULT_SUCCESS: 'success',
-  RESULT_FAILURE: 'failure'
+  RESULT_FAILURE: 'failure',
+
+  // https://github.com/elastic/apm/blob/main/specs/agents/tracing-instrumentation-messaging.md#receiving-trace-context
+  MAX_MESSAGES_PROCESSED_FOR_TRACE_CONTEXT: 1000
 }
